--- a/ML_Car_Accident_Severity_Predictions.ipynb
+++ b/ML_Car_Accident_Severity_Predictions.ipynb
@@ -5,7 +5,9 @@
     "colab": {
       "name": "ML_Car_Accident_Severity_Predictions.ipynb",
       "provenance": [],
-      "collapsed_sections": []
+      "collapsed_sections": [],
+      "authorship_tag": "ABX9TyNsk35BTQRZXh4ewGoa8cWU",
+      "include_colab_link": true
     },
     "kernelspec": {
       "name": "python3",
@@ -17,14 +19,24 @@
   },
   "cells": [
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/VinsonOi/Machine-Learning-Project/blob/main/ML_Car_Accident_Severity_Predictions.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
+    {
       "cell_type": "code",
-      "execution_count": 99,
+      "execution_count": 132,
       "metadata": {
         "id": "JdqyCOjh_X1s",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "243d36d2-3bcf-464c-f3f8-c310cab18302"
+        "outputId": "02c52b36-0eaa-4081-b8e7-5d9116ef7dae"
       },
       "outputs": [
         {
@@ -57,7 +69,7 @@
       "metadata": {
         "id": "X3F50FZHDfQt"
       },
-      "execution_count": 100,
+      "execution_count": 133,
       "outputs": []
     },
     {
@@ -68,7 +80,7 @@
       "metadata": {
         "id": "bTjZyF9aD9vx"
       },
-      "execution_count": 101,
+      "execution_count": 134,
       "outputs": []
     },
     {
@@ -82,9 +94,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "ZNm9d-JZSqjc",
-        "outputId": "74130087-daba-4244-89ec-32d029712b41"
+        "outputId": "429e1db5-2984-422c-848c-6a8b5e670540"
       },
-      "execution_count": 102,
+      "execution_count": 135,
       "outputs": [
         {
           "output_type": "stream",
@@ -148,19 +160,19 @@
           "height": 1000
         },
         "id": "UzZgWpnbE3Vr",
-        "outputId": "06f85abc-40f4-4c1f-d7ab-179e56167bc8"
+        "outputId": "11eb14a0-1cba-4252-e5dd-290f283488f2"
       },
-      "execution_count": 103,
+      "execution_count": 136,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "<matplotlib.axes._subplots.AxesSubplot at 0x7ffab376e2d0>"
+              "<matplotlib.axes._subplots.AxesSubplot at 0x7ffab7362450>"
             ]
           },
           "metadata": {},
-          "execution_count": 103
+          "execution_count": 136
         },
         {
           "output_type": "display_data",
@@ -187,9 +199,9 @@
           "height": 300
         },
         "id": "tq3Ra6FjosE-",
-        "outputId": "f3075b7a-3a49-4d6e-dc21-f1a4475cd43b"
+        "outputId": "bf9f8062-0c77-4061-f9a7-44a3edcf21c3"
       },
-      "execution_count": 112,
+      "execution_count": 137,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -227,7 +239,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-88ebf913-73a8-418f-96fb-d41f7d049001\">\n",
+              "  <div id=\"df-ebb08c11-b1a9-4f7b-91cd-067fed99e234\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -376,7 +388,7 @@
               "  </tbody>\n",
               "</table>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-88ebf913-73a8-418f-96fb-d41f7d049001')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-ebb08c11-b1a9-4f7b-91cd-067fed99e234')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -427,12 +439,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-88ebf913-73a8-418f-96fb-d41f7d049001 button.colab-df-convert');\n",
+              "          document.querySelector('#df-ebb08c11-b1a9-4f7b-91cd-067fed99e234 button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-88ebf913-73a8-418f-96fb-d41f7d049001');\n",
+              "          const element = document.querySelector('#df-ebb08c11-b1a9-4f7b-91cd-067fed99e234');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -455,7 +467,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 112
+          "execution_count": 137
         }
       ]
     },
@@ -478,9 +490,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "q91m5BX4ETVL",
-        "outputId": "a059001f-32a6-41b7-bb74-8a1689dc888c"
+        "outputId": "87328b14-e652-4c03-8fde-6ac6eef37fd4"
       },
-      "execution_count": 104,
+      "execution_count": 138,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -525,7 +537,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 104
+          "execution_count": 138
         }
       ]
     },
@@ -539,9 +551,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "Z57Ez1sULvv9",
-        "outputId": "a6a52550-fdc2-45de-d683-3f85856ef22c"
+        "outputId": "c21f8a1c-c2de-4315-aa39-2eebea3759c5"
       },
-      "execution_count": 105,
+      "execution_count": 139,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -554,7 +566,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 105
+          "execution_count": 139
         }
       ]
     },
@@ -562,12 +574,12 @@
       "cell_type": "code",
       "source": [
         "Severity2 = df[(df[\"Severity\"] == 2)]\n",
-        "Severity3 = df[(df[\"Severity\"] == 4)] \n",
+        "Severity3 = df[(df[\"Severity\"] == 3)] \n",
         "Severity4 = df[(df[\"Severity\"] == 4)] \n",
         "\n",
-        "Severity2_resampled = resample(Severity2, replace=True, n_samples= 33333, random_state=42)\n",
-        "Severity3_resampled = resample(Severity3, replace=True, n_samples= 33333, random_state=42)\n",
-        "Severity4_resampled = resample(Severity4, replace=True, n_samples= 33333, random_state=42)\n",
+        "Severity2_resampled = resample(Severity2, replace=True, n_samples= 19500, random_state=42)\n",
+        "Severity3_resampled = resample(Severity3, replace=True, n_samples= 19500, random_state=42)\n",
+        "Severity4_resampled = resample(Severity4, replace=True, n_samples= 19500, random_state=42)\n",
         "\n",
         "re_df = pd.concat([Severity2, Severity3, Severity4])\n",
         "re_df.info()"
@@ -577,56 +589,56 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "Ntw1vg7dMD8B",
-        "outputId": "5d7bda18-288b-4f60-bcb6-64a77b63f2f9"
+        "outputId": "8d0076de-8fa2-4c92-eb5f-6636f9691613"
       },
-      "execution_count": 106,
+      "execution_count": 140,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "<class 'pandas.core.frame.DataFrame'>\n",
-            "Int64Index: 93543 entries, 1 to 99953\n",
+            "Int64Index: 100000 entries, 1 to 99953\n",
             "Data columns (total 35 columns):\n",
-            " #   Column                 Non-Null Count  Dtype  \n",
-            "---  ------                 --------------  -----  \n",
-            " 0   ID                     93543 non-null  object \n",
-            " 1   Severity               93543 non-null  int64  \n",
-            " 2   Start_Lat              93543 non-null  float64\n",
-            " 3   Start_Lng              93543 non-null  float64\n",
-            " 4   End_Lat                93543 non-null  float64\n",
-            " 5   End_Lng                93543 non-null  float64\n",
-            " 6   Distance(mi)           93543 non-null  float64\n",
-            " 7   Side                   93543 non-null  object \n",
-            " 8   Zipcode                93491 non-null  object \n",
-            " 9   Country                93543 non-null  object \n",
-            " 10  Timezone               93478 non-null  object \n",
-            " 11  Temperature(F)         91366 non-null  float64\n",
-            " 12  Humidity(%)            91271 non-null  float64\n",
-            " 13  Pressure(in)           91858 non-null  float64\n",
-            " 14  Visibility(mi)         91092 non-null  float64\n",
-            " 15  Wind_Direction         92670 non-null  object \n",
-            " 16  Wind_Speed(mph)        77451 non-null  float64\n",
-            " 17  Weather_Condition      91086 non-null  object \n",
-            " 18  Amenity                93543 non-null  bool   \n",
-            " 19  Bump                   93543 non-null  bool   \n",
-            " 20  Crossing               93543 non-null  bool   \n",
-            " 21  Give_Way               93543 non-null  bool   \n",
-            " 22  Junction               93543 non-null  bool   \n",
-            " 23  No_Exit                93543 non-null  bool   \n",
-            " 24  Railway                93543 non-null  bool   \n",
-            " 25  Roundabout             93543 non-null  bool   \n",
-            " 26  Station                93543 non-null  bool   \n",
-            " 27  Stop                   93543 non-null  bool   \n",
-            " 28  Traffic_Calming        93543 non-null  bool   \n",
-            " 29  Traffic_Signal         93543 non-null  bool   \n",
-            " 30  Turning_Loop           93543 non-null  bool   \n",
-            " 31  Sunrise_Sunset         93523 non-null  object \n",
-            " 32  Civil_Twilight         93523 non-null  object \n",
-            " 33  Nautical_Twilight      93523 non-null  object \n",
-            " 34  Astronomical_Twilight  93523 non-null  object \n",
+            " #   Column                 Non-Null Count   Dtype  \n",
+            "---  ------                 --------------   -----  \n",
+            " 0   ID                     100000 non-null  object \n",
+            " 1   Severity               100000 non-null  int64  \n",
+            " 2   Start_Lat              100000 non-null  float64\n",
+            " 3   Start_Lng              100000 non-null  float64\n",
+            " 4   End_Lat                100000 non-null  float64\n",
+            " 5   End_Lng                100000 non-null  float64\n",
+            " 6   Distance(mi)           100000 non-null  float64\n",
+            " 7   Side                   100000 non-null  object \n",
+            " 8   Zipcode                99939 non-null   object \n",
+            " 9   Country                100000 non-null  object \n",
+            " 10  Timezone               99927 non-null   object \n",
+            " 11  Temperature(F)         97686 non-null   float64\n",
+            " 12  Humidity(%)            97597 non-null   float64\n",
+            " 13  Pressure(in)           98198 non-null   float64\n",
+            " 14  Visibility(mi)         97382 non-null   float64\n",
+            " 15  Wind_Direction         99091 non-null   object \n",
+            " 16  Wind_Speed(mph)        83672 non-null   float64\n",
+            " 17  Weather_Condition      97425 non-null   object \n",
+            " 18  Amenity                100000 non-null  bool   \n",
+            " 19  Bump                   100000 non-null  bool   \n",
+            " 20  Crossing               100000 non-null  bool   \n",
+            " 21  Give_Way               100000 non-null  bool   \n",
+            " 22  Junction               100000 non-null  bool   \n",
+            " 23  No_Exit                100000 non-null  bool   \n",
+            " 24  Railway                100000 non-null  bool   \n",
+            " 25  Roundabout             100000 non-null  bool   \n",
+            " 26  Station                100000 non-null  bool   \n",
+            " 27  Stop                   100000 non-null  bool   \n",
+            " 28  Traffic_Calming        100000 non-null  bool   \n",
+            " 29  Traffic_Signal         100000 non-null  bool   \n",
+            " 30  Turning_Loop           100000 non-null  bool   \n",
+            " 31  Sunrise_Sunset         99985 non-null   object \n",
+            " 32  Civil_Twilight         99985 non-null   object \n",
+            " 33  Nautical_Twilight      99985 non-null   object \n",
+            " 34  Astronomical_Twilight  99985 non-null   object \n",
             "dtypes: bool(13), float64(10), int64(1), object(11)\n",
-            "memory usage: 17.6+ MB\n"
+            "memory usage: 18.8+ MB\n"
           ]
         }
       ]
@@ -649,7 +661,7 @@
       "metadata": {
         "id": "AqWt37hKKRRA"
       },
-      "execution_count": 107,
+      "execution_count": 141,
       "outputs": []
     },
     {
@@ -660,7 +672,7 @@
       "metadata": {
         "id": "oxNrg5GwLjMn"
       },
-      "execution_count": 108,
+      "execution_count": 142,
       "outputs": []
     },
     {
@@ -673,33 +685,33 @@
       "metadata": {
         "id": "JcFlnOEtNH1m"
       },
-      "execution_count": 109,
+      "execution_count": 143,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "recall = recall_score(pred, y_test, pos_label=4)\n",
-        "recall"
+        "accuracy = accuracy_score(pred, y_test)\n",
+        "accuracy"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "id": "wLBhL-pwPIJS",
-        "outputId": "d865e027-7696-4ada-daac-7a1fb6122e57"
+        "id": "epes8L1P0spW",
+        "outputId": "68402a33-da63-41e7-ef02-5e3e41358e27"
       },
-      "execution_count": 111,
+      "execution_count": 144,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "0.7657538766083801"
+              "0.64635"
             ]
           },
           "metadata": {},
-          "execution_count": 111
+          "execution_count": 144
         }
       ]
     },
@@ -711,7 +723,7 @@
       "metadata": {
         "id": "CnwKiIsqQtPX"
       },
-      "execution_count": 110,
+      "execution_count": 145,
       "outputs": []
     }
   ]
